# video_analyzer

./: .env.example  README.md  SETUP.md  app.py  demo.py  pyproject.toml  requirements.txt  run.py
src/components/: navigation.py  notes_page.py  qa_page.py  upload_page.py
src/services/: notes_generator.py  rag_system.py  transcription_service.py  video_processor.py
src/utils/: cache.py  config.py
